--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,39 @@
 
 #User-specific files
 *.user
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/refint/LearningBackEnd.dll
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/apphost.exe
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/ref/LearningBackEnd.dll
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.assets.cache
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.csproj.CoreCompileInputs.cache
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.csproj.FileListAbsolute.txt
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.dll
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.GeneratedMSBuildEditorConfig.editorconfig
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.genruntimeconfig.cache
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.pdb
+/LearningBackEnd/LearningBackEnd/obj/LearningBackEnd.csproj.nuget.dgspec.json
+/LearningBackEnd/LearningBackEnd/obj/LearningBackEnd.csproj.nuget.g.props
+/LearningBackEnd/LearningBackEnd/obj/project.assets.json
+/LearningBackEnd/LearningBackEnd/obj/project.nuget.cache
+/LearningBackEnd/LearningBackEnd/bin/Debug/net6.0/LearningBackEnd.dll
+/LearningBackEnd/LearningBackEnd/bin/Debug/net6.0/LearningBackEnd.exe
+/LearningBackEnd/LearningBackEnd/bin/Debug/net6.0/LearningBackEnd.pdb
+/LearningBackEnd/.vs/LearningBackEnd/v17/.suo
+/LearningBackEnd/.vs/LearningBackEnd/v17/.suo
+/LearningBackEnd/LearningBackEnd/bin/Debug/net6.0/LearningBackEnd.dll
+/LearningBackEnd/LearningBackEnd/bin/Debug/net6.0/LearningBackEnd.exe
+/LearningBackEnd/LearningBackEnd/bin/Debug/net6.0/LearningBackEnd.pdb
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/ref/LearningBackEnd.dll
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/refint/LearningBackEnd.dll
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/apphost.exe
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.assets.cache
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.csproj.CoreCompileInputs.cache
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.csproj.FileListAbsolute.txt
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.dll
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.GeneratedMSBuildEditorConfig.editorconfig
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.genruntimeconfig.cache
+/LearningBackEnd/LearningBackEnd/obj/Debug/net6.0/LearningBackEnd.pdb
+/LearningBackEnd/LearningBackEnd/obj/LearningBackEnd.csproj.nuget.dgspec.json
+/LearningBackEnd/LearningBackEnd/obj/LearningBackEnd.csproj.nuget.g.props
+/LearningBackEnd/LearningBackEnd/obj/project.assets.json
+/LearningBackEnd/LearningBackEnd/obj/project.nuget.cache
