--- a/LearningBackEnd/Shop/appsettings.json
+++ b/LearningBackEnd/Shop/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "metadata=res://*/ProductModel.csdl|res://*/ProductModel.ssdl|res://*/ProductModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\\sqlexpress;initial catalog=ShopDataBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+  }
 }
