--- a/LearningBackEnd/Shop/Shop.csproj
+++ b/LearningBackEnd/Shop/Shop.csproj
@@ -18,4 +18,13 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shop.Models\Shop.Models.csproj" />
+  </ItemGroup>
+
 </Project>
